# happytime-budtender

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
voice/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Caddyfile.prod  Dockerfile  Makefile  README.md  conftest.py  docker-compose.prod.yaml  docker-compose.yaml  manage.py  pyproject.toml  text_smoke.py
voice/brand/: CAPTURE.md  tokens.json
voice/config/: settings.py  urls.py
voice/core/: __init__.py  celery.py  constants.py  middleware.py  urls.py  views.py
voice/core/services/: gemini.py  vapi.py
voice/crm/: models.py  sinks.py  suggestions.py
voice/crm/migrations/: 0001_initial.py  0002_alertdelivery.py  0003_vendorcallback.py  0004_customerprofile.py
voice/crm/tests/: test_customer_profiles.py
voice/dashboard/: apps.py  branding.py  credentials.py  flowgraph.py  forms.py  models.py  monitor.py  publish.py  urls.py  views.py  weights.py
voice/dashboard/migrations/: 0001_initial.py  0002_credential.py
voice/dashboard/tests/: test_branding.py  test_clean_graph.py  test_credentials.py  test_publish.py  test_staff_gating.py  test_views.py
voice/docs/plans/: 00-MASTER-ROADMAP.md  01-ARCHITECTURE.md  02-DECISIONS.md  03-CONVENTIONS.md  10-P0-CHASSIS-FAQ.md  11-P1-DUTCHIE-SUGGESTIONS.md  12-P2-ESCALATION-TRANSFER-EMAIL.md  13-P3-VENDOR-ROUTING.md  14-P4-dashboard-publish.md  15-P5-polish-brand.md  16-CAPABILITY-EXPANSIONS.md  20-SPEC-vapi-deploy.md  21-SPEC-budtender-contract.md  22-SPEC-kb-seed.md  23-SPEC-security-guardrails.md  24-SPEC-testing.md  25-P6-control-plane.md  99-PLAN-REVIEW.md  _research-education-blogs.md  _research-suggestion-engine.md
voice/kb/: ingest.py  models.py  seed.py  semantic.py  taxonomy_source.py  vapi_files.py
voice/kb/migrations/: 0001_initial.py  0002_agentprompt_last_publish_hash_and_more.py  0003_agentprompt_model_provider_and_more.py
voice/templates/dashboard/: _agent_card.html  _call_transcript.html  _calls_live.html  analytics.html  (+23 more)
voice/tests/: test_chassis_smoke.py  test_kb.py
voice/voice/: admin.py  budtender_client.py  callfetch.py  constants.py  corrections.py  guardrails.py  models.py  outcomes.py  pricing.py  provision.py  recognition.py  routing.py  signing.py  summarize.py  tasks.py  urls.py  vendor_flow.py  webhooks.py  workflow.py
(+84 files in other folders)
