[project]
name = "happytime-voice"
version = "0.1.0"
description = "Happy Time Voice Agent — Vapi voice surface + grounded FAQ/budtender (Gemini, Django)"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<5.3",
    "djangorestframework>=3.16",
    "psycopg[binary]>=3.2",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "pdfplumber>=0.11",
    "pillow>=11.0",
    "httpx>=0.27",
    "requests>=2.32",
    "gunicorn>=23.0",
    "whitenoise>=6.8",
    "celery>=5.6.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Verbatim lifts from swedish-bot (10-P0 A3: byte-identical). Do NOT reformat or
# re-lint — these files are owned upstream and must not drift.
"core/services/gemini.py" = ["ALL"]
"core/constants.py" = ["ALL"]

[tool.ruff.format]
# Same verbatim-lift exclusion for the formatter — keep gemini.py/constants.py
# byte-identical to swedish-bot (10-P0 A3).
exclude = ["core/services/gemini.py", "core/constants.py"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "tests.py"]
addopts = "-m 'not live and not manual'"
markers = [
    "live: hits a real external API (Vertex Gemini / Vapi) — opt-in: pytest -m live",
    "integration: contract tests across the voice⇄budtender / voice⇄Vapi boundary (clients mocked)",
    "manual: a real inbound phone call — opt-in, paste evidence",
]

[tool.uv]
# This is a Django application, not a distributable package — install deps only,
# don't try to build the project (no [build-system] needed).
package = false
